registers now contains custom field for users